--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.1.3",
-        "pds/skeleton": "^1.0"
+        "pds/skeleton": "^1.0",
+        "symfony/console": "^3.3"
     },
     "autoload": {
         "psr-4": {
