--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": "^7.1.3",
         "pds/skeleton": "^1.0",
-        "symfony/console": "^3.3"
+        "symfony/console": "^3.3",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
