--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "php": "^7.1.3",
         "pds/skeleton": "^1.0",
         "symfony/console": "^3.3",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "filp/whoops": "^2.1",
+        "symfony/event-dispatcher": "^3.3",
+        "symfony/var-dumper": "^3.3"
     },
     "autoload": {
         "psr-4": {
